# MCU-Quake

./: .gitignore  README.md  regions.h
quake/: chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  crc.c  cvar.c  cvar.h  draw.c  host.c  host_cmd.c  keys.c  keys.h  mathlib.c  menu.c  modelgen.h  net.h  net_loop.c  net_main.c  net_vcr.c  pr_cmds.c  pr_comp.h  pr_edict.c  pr_exec.c  progs.h  qfile.c  qfile.h  quakedef.h  sbar.c  screen.c  server.h  spritegn.h  sv_main.c  (+9 more)
quake/render/: d_edge.c  d_fill.c  d_iface.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  model.c  model.h  r_aclip.c  r_alias.c  r_bsp.c  r_draw.c  r_edge.c  r_efrag.c  r_light.c  r_local.h  r_main.c  r_misc.c  r_part.c  r_sky.c  r_sprite.c  r_surf.c
targets/pico2/: CMakeLists.txt  howto_build.txt  main.c  pico2.ld  qfile.c
targets/pico2/sys/: audio.h  cd_null.c  sys.h  sys_rp2.c  video.h
targets/pico2/sys/audio/: audio_common.c  audio_na.c
targets/pico2/sys/input/: input_common.c
targets/pico2/sys/net/: net_common.c
targets/pico2/sys/video/: video_common.c  video_dvi.c  video_lcd.c
targets/rpi/: cd_null.c  in_null.c  main.c  makefile  net_none.c  sizehelp  snd_null.c  sys_linux.c  vid_pi.c
